results.css
html, body, h1, h4, ul, li, main, div {
  font-family: 'Open Sans', sans-serif;
  margin: 0 auto;
  font-size: 16px;
  background-color: #080808;
  color: #FFFACD;
}

h1 {
  margin-bottom: 30px;
}

ul {
  list-style: none;
}

a {
  color: #B0E0E6;
}


#initial-results-ul {
  padding: 0;
  margin: 0 auto;
  max-width: 600px;
  min-width: 400px;
}

#sources {
  padding: 0;
  margin: 0 auto;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 600px;
  min-width: 400px;
}

#general-sources {
  margin: 0 auto;
  padding-left: 10px;
  max-width: 600px;
  min-width: 400px;
  text-align: center;
}

#season-detail {
  margin: 0 auto;
  padding-left: 10px;
  max-width: 600px;
  min-width: 400px;
  text-align: center;
  padding-top: 30px;
}

#season-list {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
}

#episode-list {
  max-width: 600px;
  min-width: 400px;
  margin-top: 30px;
  margin-bottom: 120px;
}

#episode-list li {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  margin-top: 10px;
  margin-right: 0;
  padding-bottom: 10px;
  padding-right: 0;
  border-bottom: 3px solid #FFFACD;
}

#episode-list a {
  margin-left: 10px;
  margin-top: 5px;
}

p {
  padding: 0;
  display: inline-block;
  margin-right: 30px;
  margin-bottom: 0;
  color: #FFFACD;
}

.list-item {
  padding: 0;
  margin: 0 auto;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid #808080;
  font-weight: 700;
}

.list-item:hover {
  background-color: #FFFACD;
  color: #09092a;
  cursor: pointer;
}

.poster {
  margin: 20px auto;
  display: block;
  border: 1px solid #FFFFF0;
}

.movie-title {
  margin: 0 auto;
  padding: 15px;
  display: block;
  font-size: 18px;
  text-align: center;
  margin-bottom: 15px;
}

.source-list {
  padding: 0;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-content: flex-start;
}

.logo {
  width: 80px;
  padding: 15px;
}

.logo:hover {
  box-shadow: 1px 1px 1px 1px #F0FFFF;
}

.season-list-item {
  background-color: #FFFACD;
  color: black;
  padding: 5px;
  margin: 0;
  border: 1px solid black;
}

.season-list-item:hover {
  color: #FFFACD;
  background-color: gray;
  cursor: pointer;
}

